first three chapters from christian a

--- a/CMS.tex
+++ b/CMS.tex
@@ -1,15 +1,15 @@
-Located in one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. Key ingredients are high precision measurements of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momentum of charged particle by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
+Located at one of the four intersections of the LHC beams, the CMS detector is designed to measure the resulting collisions to high precision~\cite{CMS}. Key characteristics are high precision measurements of the properties of single particles as well as a good coverage of the 4$\pi$ solid angle. The central element of the CMS detector is a superconducting solenoid. Cooled to $\unit{4.45}{\kelvin}$, it is able to produce a homogeneous magnetic field of $\unit{3.8}{\tesla}$, which allows to measure the momentum of charged particle by bending their trajectories. As shown in Figure~\ref{fig:CMS}, the different components of the detector are layered in cylindrical shapes around the interaction point. The magnet encompasses most of the main subdetectors, namely the tracking system which measures the trajectories of charged particles and the electromagnetic and hadron calorimeters, designed to measure the energy of particles. Located outside of the volume of the solenoid are the iron return yoke and muon detectors. This cylindrical structure is complemented on both sides by endcaps, which close the solid angle in the direction of the beams and are partly located outside the volume of the solenoid. The different components are described in more detail in the following. 
 \begin{figure}[htbp]
 \centering
-  \includegraphics[width=0.6\textwidth]{plots/CMS/cms_design.png}
+  \includegraphics[width=0.8\textwidth]{plots/CMS/cms_design.png}
 \caption{Schematic view of the CMS detector~\cite{CMSScetch}. From the inside out, the tracking system is shown in blue, the electromagnetic calorimeter in green, the hadron calorimeter in light yellow, the superconducting solenoid in white, the return yoke in red, and the muon system again in white.}
 \label{fig:CMS}
 \end{figure}
 \subsection{Tracking system}
-The trajectory of charged particles can be determined by measuring the signal of the ionisation they cause when traversing matter. The tracking system of the CMS detector consists of many layers of silicon pixels and strips. Combining the points at which a charged particle traverses the different layers, the trajectory of this particle can be reconstructed. The bending of this trajectory under the influence of the magnetic field allows to determine the momentum of the particle. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
+The tracking system of the CMS detector consists of many layers of silicon pixels and strips. The trajectories of charged particles are reconstructed from the signal of the ionisation they cause when traversing matter. The bending of these trajectories under the influence of the magnetic field allows to determine the momentum of particles. The tracking system has a diameter of $\unit{2.5}{\meter}$ and a length of $\unit{5.8}{\meter}$, corresponding to a geometric coverage of $\vert \eta \vert < $ 2.5. The tracking detector consists, as shown in Figure~\ref{fig:tracker}, of the pixel detector (PIXEL) surrounded by various components of  the silicon strip tracker. 
 \begin{figure}[htbp]
 \centering
-  \includegraphics[width=0.6\textwidth]{plots/CMS/Tracker.png}
+  \includegraphics[width=0.85\textwidth]{plots/CMS/Tracker.png}
 \caption{Schematic view of the CMS tracking detector. The innermost part shows the pixel detector (PIXEL), surrounded by the tracker inner barrel (TIB) and tracker inner discs (TID). The outermost parts of the tracking detector are the tracker outer barrel (TOB) and the two tracker endcaps (TEC+ and TEC-)~\cite{CMS}.}
 \label{fig:tracker}
 \end{figure} 
@@ -22,7 +22,7 @@ Stereo modules, constructed by placing two modules back to back, rotated by $\un
 
 For high momentum tracks of about $\unit{100}{\giga\electronvolt}$ in the region of $\vert \eta \vert < 1.6$ a \pt resolution of 1-2\% is achieved, while the impact parameter of these tracks can be measured with a resolution of about $\unit{10}{\micro\meter}$. 
 
-Compared to other tracking technologies, an all silicon tracking system, as used in CMS, consists of significantly more material. The material budget lies between 0.4 and 1.8 radiation length $X_0$, as shown in Figure~\ref{fig:trackerMaterial}. For light charged particles, such as electrons, this leads to a significant probability to emit bremsstrahlung while traversing the tracking detector, which has to be taken into account in the reconstruction of particles.    
+Compared to gas-based tracking technologies, an all silicon tracking system, as used in CMS, consists of significantly more material. The material budget lies between 0.4 and 1.8 radiation length $X_0$, as shown in Figure~\ref{fig:trackerMaterial}. For light charged particles, such as electrons, this leads to a significant probability to emit bremsstrahlung while traversing the tracking detector, which has to be taken into account in the reconstruction of particles.    
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/TrackerMaterial.png}
@@ -30,7 +30,7 @@ Compared to other tracking technologies, an all silicon tracking system, as used
 \label{fig:trackerMaterial}
 \end{figure} 
 \subsection{Electromagnetic calorimeter}
-The electromagnetic calorimeter (ECAL) measures the energy of electrons and photons. It uses lead tungstate ($\mathrm{PbWO}_4$) crystals as both absorber and active material. The electromagnetic shower induced by the electron or photon leads to the emission of scintillation light in the crystal, which is measured at the backside of the crystals by avalanche photo diodes (APDs) in the barrel segment of the ECAL and more radiation hard vacuum photo triods (VTPs) in the endcap region. The choice of lead tungstate was driven by the need for a material that is at the same time dense ($\unit{8.28}{\gram\per\centi\cubic\meter}$), has a small Moli\`{e}re radius ($\unit{2.2}{\centi\meter}$), and has a fast response. About 80\% of the scintillation light is emitted in $\unit{25}{\nano\second}$, which is the time between two LHC bunch crossings under design conditions. 
+The electromagnetic calorimeter (ECAL) measures the energy of electrons and photons. It uses lead tungstate ($\mathrm{PbWO}_4$) crystals as both absorber and active material. The electromagnetic shower induced by the electron or photon leads to the emission of scintillation light in the crystal, which is measured at the backside of the crystals by avalanche photo diodes (APDs) in the barrel segment of the ECAL and more radiation hard vacuum photo triods (VTPs) in the endcap region. The choice of lead tungstate was driven by the need for a material that is at the same time dense ($\unit{8.28}{\gram\per\centi\cubic\meter}$), has a small Moli\`{e}re radius ($\unit{2.2}{\centi\meter}$), and has a fast response. About 80\% of the scintillation light is emitted within $\unit{25}{\nano\second}$, which is the time between two LHC bunch crossings under design conditions. 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/ECAL.png}
@@ -49,7 +49,7 @@ The typical energy resolution of the ECAL is parametrised as
 \end{equation}
 with three terms describing different sources of uncertainty. The first term includes statistical fluctuations in the production of scintillation light as well as the energy distribution over several crystals. The second term covers such sources of noise as electronic noise or pileup. The constant term accounts for other sources of uncertainties such as calibration errors. The size of the different contributions has been confirmed in test beam measurements~\cite{EGM-10-003}. 
 \subsection{Hadron calorimeter}
-The hadron calorimeter (HCAL) measures the energy of charged and neutral hadrons. In the barrel region of the detector it is situated between the back face of the ECAL and the coil of the solenoid, at radii between $\unit{1.7}{\meter}$ and $\unit{2.95}{\meter}$, limiting the amount of material that can be used in its construction. Therefore, additional detectors are placed outside of the volume of the magnet, forming the hadron outer calorimeter (HO). The HCAL barrel (HB) is complemented on each side by a HCAL endcap (HE) and the geometric coverage is extended to high values of $\vert \eta \vert$ by dedicated forward calorimeters (HF). The placement of these subdetectors relative to the other components of CMS is shown in Figure~\ref{fig:HCAL}.
+The hadron calorimeter (HCAL) measures the energy of charged and neutral hadrons. In the barrel region of the detector it is situated between the ECAL and the coil of the solenoid, at radii between $\unit{1.7}{\meter}$ and $\unit{2.95}{\meter}$, limiting the amount of material that can be used in its construction and therefore its ability to contain the hadronic showers. Therefore, additional detectors are placed outside of the volume of the magnet, forming the hadron outer calorimeter (HO). The HCAL barrel (HB) is complemented on each side by a HCAL endcap (HE) and the geometric coverage is extended to high values of $\vert \eta \vert$ by dedicated forward calorimeters (HF). The placement of these subdetectors relative to the other components of CMS is shown in Figure~\ref{fig:HCAL}.
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/HCAL.png}
@@ -57,7 +57,7 @@ The hadron calorimeter (HCAL) measures the energy of charged and neutral hadrons
 \label{fig:HCAL}
 \end{figure} 
 \subsubsection*{HCAL barrel and outer detectors (HB and HO)}  
-The HB covers the geometric region $\vert \eta \vert \leq 1.3$. It is constructed as a sandwich calorimeter, consisting of plastic scintillator as the active material. For the absorber material, the fourteen inner layers of the HB are made from brass, while steel is used for the front and back plates of the HB to increase the stability of the construction. The scintillator is divided in 144 segments in $\phi$ and 32 segments in $\eta$, resulting in a spatial granularity of 0.087 in both $\eta$ and $\phi$. The scintillation light produced in the active material is transported to hybrid photo diodes using scintillating fibres. As all layers of one tower in $\eta$ and $\phi$ are read out by the the same photo diode, there is no segmentation in the readout in $r$, except for the two towers closest to the HE on each side. The material of the ECAL in front of the HB corresponds to about 1.1 interaction length $\lambda_i$. The absorber material of the HB itself amounts to only 5.82 $\lambda_i$ at $\eta = 0$, which increases to 10.6 $\lambda_i$ at $\vert \eta \vert = 1.3$. To measure the energy of jets not contained in the HB, the HO is placed outside the vacuum containment of the solenoid. It consists of one additional layer of scintillator, with the magnet acting as absorber, except for the most central part of the detector, where one additional layer of steel absorber and scintillator are installed. Hereby the material budget of the HCAL is increased to at least 10 $\lambda_i$ over the whole barrel region.
+The HB covers the geometric region $\vert \eta \vert \leq 1.3$. It is constructed as a sandwich calorimeter, consisting of plastic scintillator as the active material. For the absorber material, the fourteen inner layers of the HB are made from brass, while steel is used for the front and back plates of the HB to increase the stability of the construction. The scintillator is divided into 144 segments in $\phi$ and 32 segments in $\eta$, resulting in a spatial granularity of 0.087 in both $\eta$ and $\phi$. The scintillation light produced in the active material is transported to hybrid photo diodes using scintillating fibres. As all layers of one tower in $\eta$ and $\phi$ are read out by the the same photo diode, there is no segmentation in the readout in $r$, except for the two towers closest to the HE on each side. The material of the ECAL in front of the HB corresponds to about 1.1 interaction length $\lambda_i$. The absorber material of the HB itself amounts to only 5.82 $\lambda_i$ at $\eta = 0$, which increases to 10.6 $\lambda_i$ at $\vert \eta \vert = 1.3$. To measure the energy of jets not contained in the HB, the HO is placed outside the vacuum containment of the solenoid. It consists of one additional layer of scintillator, with the magnet acting as absorber, except for the most central part of the detector, where one additional layer of steel absorber and scintillator are installed. Hereby the material budget of the HCAL is increased to at least 10 $\lambda_i$ over the whole barrel region.
 
 \subsubsection*{HCAL endcaps (HE)}
 The HE extends the geometric coverage of the HCAL up to $\vert\eta\vert =3.0$, coinciding with the coverage of the EEs. It is constructed from the same combination of brass absorber and plastic scintillator as the HB and for the region $1.3 \leq \vert\eta\vert \leq 1.6$ also retains the $\Delta\eta \times \Delta \phi = 0.087\times 0.087$ granularity in $\eta$ and $\phi$. For $\vert\eta\vert \geq 1.6$ the segmentation is coarser, resulting a granularity of $\Delta\eta \times \Delta \phi \approx 0.17\times0.17$. This structure again corresponds to about 10 $\lambda_i$. The longitudinal segmentation of the readout of the towers differs based on the location of the tower. The two towers closest to the beam line are read out in three segments, while most others are divided into two segments. The two towers overlapping with HB are read out without longitudinal segmentation. Multipixel hybrid photo diodes have been chosen for the readout due to their low sensitivity to magnetic fields.
@@ -70,20 +70,20 @@ In the barrel, the DT chambers, each made of two or three superlayers, which in 
 \begin{figure}[htbp]
 \centering
   \includegraphics[width=0.6\textwidth]{plots/CMS/DT.png}
-\caption{Schematic view of one DT~\cite{CMS}.}
+\caption{Schematic view of one drift tube~\cite{CMS}.}
 \label{fig:DT}
 \end{figure}  
 \subsubsection*{Cathode strip chambers (CSC)}
 The CSC are multiwire proportional chambers, consisting of six planes of anode wires interleaved with seven panels of cathode strips. The chambers have trapezoidal shapes and are arranged in four discs around the beam axis, each further segmented into two or three rings. The cathode strips measure the $\phi$ coordinate while the anode wires measure the radial coordinate. Figure~\ref{fig:CSC} shows the structure of one chamber on the left side and the creation of a signal due to a amplification of the initial ionisation in an avalanche close to the anode wire. 
 \begin{figure}[htbp]
 \centering
-  \includegraphics[width=0.6\textwidth]{plots/CMS/CSC.png}
+  \includegraphics[width=0.85\textwidth]{plots/CMS/CSC.png}
 \caption{Schematic view of one CSC (left) and the creation of a signal (right)~\cite{CMS}.}
 \label{fig:CSC}
 \end{figure}  
 \subsubsection*{Resistive plate chambers (RPC)}
-The RPCs consist of three layers of Bakelite, which form two small gas filled gaps and between which high voltage is applied. The amplification of the initial signal is very fast in this configuration, with drift times of about $\unit{5}{\nano\second}$. Therefore, this technology is well suited to associate muon candidates to the LHC bunch crossings. In the barrel region six layers of RPCs are installed, while three layers are used in the endcaps for $\vert\eta\vert \leq 1.6$.
+The RPCs consist of three layers of bakelite, which form two small gas filled gaps and between which high voltage is applied. The amplification of the initial signal is very fast in this configuration, with drift times of about $\unit{5}{\nano\second}$. Therefore, this technology is well suited to associate muon candidates to the LHC bunch crossings. In the barrel region six layers of RPCs are installed, while three layers are used in the endcaps for $\vert\eta\vert \leq 1.6$.
 \subsubsection*{Momentum resolution}
 The \pt resolution of the muon system alone was expected to be about 10\% for muons with \pt up to $\unit{200}{\giga\electronvolt}$. Combined with the information from the inner tracking system, a resolution of about 1\% was expected to be achieved in the central region of $\vert\eta\vert \leq 0.8$ for a \pt of $\unit{10}{\giga\electronvolt}$, increasing to about 2\% for a \pt of $\unit{200}{\giga\electronvolt}$.
 
-The \pt resolution for muons has been measured using data collected in 2010~\cite{MUO-10-004}. Using the muon system alone, resolutions better than 10\% have been found for the barrel region for muons with \pt $> \unit{15}{\giga\electronvolt}$. The muon resolution improves when combining the information from the muon system with those from the inner tracking system. The precision of the tracking system dominates for a wide \pt range and averaging over $\eta$ and $\phi$ resolutions of (1.8$\pm$0.3(stat.))\% at $\unit{\pt = 30}{\giga\electronvolt}$ to (2.3$\pm$0.3(stat.))\% at $\unit{\pt = 50}{\giga\electronvolt}$ have been achieved.
+The \pt resolution for muons has been measured using data collected in 2010~\cite{MUO-10-004}. Using the muon system alone, resolutions better than 10\% have been found for the barrel region for muons with \pt $> \unit{15}{\giga\electronvolt}$. The muon resolution improves when combining the information from the muon system with those from the inner tracking system. The precision of the tracking system dominates for a wide \pt range and averaging over $\eta$ and $\phi$ resolutions of 1.8$\pm$0.3(stat.)\% at $\unit{\pt = 30}{\giga\electronvolt}$ to 2.3$\pm$0.3(stat.)\% at $\unit{\pt = 50}{\giga\electronvolt}$ have been achieved.
