--- a/appendixSamples.tex
+++ b/appendixSamples.tex
@@ -1,5 +1,5 @@
 \chapter{Simulated Samples}
-The list of a simulated samples of SM background processes is shown in Table~\ref{appTab:MCSamples}. Given is the physics process together with relevant information about the simulated decays or generator selections. Also the name of the dataset in DBS is given. Example DBS entries for the fixed-edge and slepton-edge simplified models are given in Table~\ref{appTab:MCSamples} for the points with the lowest masses in both models. The names of all other points can be constructed by replacing the masses in examples given in the Table. 
+The list of a simulated samples of SM background processes is shown in Table~\ref{appTab:MCSamples}. Given is the physics process together with relevant information about the simulated decays or generator selections. Also the name of the dataset in DBS is given. Example DBS entries for the fixed-edge and slepton-edge simplified models are given in Table~\ref{appTab:MCSamples2} for the points with the lowest masses in both models. The names of all other points can be constructed by replacing the masses in examples given in the Table. 
 
 
 
@@ -69,7 +69,7 @@ $t\bar{t}$, Factorization scale down & \verb+/TTJets_scaledown_TuneZ2star_8TeV-m
 \begin{table}[htb] 
 \scriptsize
 \caption{Examples of DBS dataset names for the fixed-edge and slepton-edge simplified models. The three-digit numbers represent the number of \sbottom and \secondchi in \GeV. The names for other mass points are obtained by replacing the values for $m_{\sbottom}$ and $m_{\secondchi}$ by the desired ones. Exceptions are the sample for $m_{\sbottom}$ between $\unit{400}{\giga\electronvolt}$ and $\unit{475}{\giga\electronvolt}$, where the hash b7ae8e1adb016da4a96f7b394c3a565a has be replaced by 56193729e3030b18064f6ae9be549394.}
-\label{appTab:MCSamples}
+\label{appTab:MCSamples2}
 \begin{tabular}{c|c}
  process & sample \\
 \hline 
