--- a/background.tex
+++ b/background.tex
@@ -119,13 +119,13 @@ The systematic uncertainties assigned to the measured values of \rmue are 10\% f
 \end{figure} 
 \subsubsection{Measurement of \RT}
 \label{sec:triggerEffs}
-The trigger efficiencies are measured utilizing an event sample collected with the $H_T$ triggers discussed in Section~\ref{sec:trigger}. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $\HT > \unit{200}{\giga\electronvolt}$, which corresponds to the lowest threshold applied in one of the \HT triggers. To ensure that the factorisation method is performed on event samples completely orthogonal to the signal region and the $t\bar{t}$ enriched control region, events with $\njets \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
+The trigger efficiencies are measured utilizing an event sample collected with the \HT triggers discussed in Section~\ref{sec:trigger}. Lepton pairs corresponding to the flavour combination of the trigger in question are selected. To ensure that only correctly reconstructed events are considered in the calculation of the trigger efficiencies, the events are required to have $\HT > \unit{200}{\giga\electronvolt}$. This excludes events which are completely different in their properties on trigger and analysis level and at the same time is lower than the threshold applied in the trigger because the \HT definition on trigger level differs from the one used offline. To ensure that the factorisation method is performed on event samples completely orthogonal to the signal region and the $t\bar{t}$ enriched control region, events with $\njets \geq 2$ and $\MET > \unit{100}{\giga\electronvolt}$ are rejected. As the offline lepton selection has more strict requirements compared to the one applied at HLT level, the dilepton triggers should have accepted all these events. The trigger efficiency is therefore defined as the ratio of accepted events by the total number of events:
 \begin{equation}
 \epsilon_{\ell\ell}^T = \frac{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection} \cap \ell\ell\text{ trigger})}{N_{\text{events}}(H_T\text{ trigger} \cap \ell\ell\text{ selection})}.
 \end{equation}
 In case of \MM and OF events, two triggers are used in the event selection. Therefore, their combined efficiency is measured, requesting the logical OR of both. The resulting efficiencies are summarised in Table~\ref{tab:EffValues_Seperated}, separately for the central and forward lepton selections. The efficiencies on simulation are measured with much higher statistical precision because the trigger prescales are not applied there. The trigger efficiencies for \EE and \MM are about 97\% in both the central and forward selection. The efficiency for OF events is lower, about 95\% in the central and 90\% in the forward selection. This shows how the flavour symmetry is broken at trigger level by the inclusion of the \verb+HLT_Mu17_TkMu8+ trigger, which recovers efficiency for the trailing muon leg of the trigger and is not present in the OF triggers.   
 \input{tab/table_TriggerEffsExclusive_Seperated.tex}
-To assess the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the $H_T$ triggers, as no trigger is needed to select the events. The ratio of this true trigger efficiencies to those measured with the $H_T$ triggers as a function of \mll is shown in Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from unity are in the order of 0.1\% and well compatible with it inside the statistical uncertainties. No bias of the efficiency measurement due to the \HT triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
+To assess the systematic uncertainties of the trigger efficiency measurement, potential biases due to the choice of the orthogonal trigger  are studied on simulation, using dileptonic $t\bar{t}$ events. On simulation the efficiency can be measured without the requirement of the PF \HT triggers, as no trigger is needed to select the events. The ratio of this true trigger efficiencies to those measured with the PF \HT triggers as a function of \mll is shown in Figure~\ref{fig:triggerEffBias}, separately for SF and OF events. In both cases all deviations from unity are in the order of 0.1\% and well compatible with it inside the statistical uncertainties. No bias of the efficiency measurement due to the PF \HT triggers is observed and therefore no systematic uncertainty due to this choice is assigned to the measurement.
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_AlphaTSyst_PFHT_HighHTExclusive_Full2012_Mll_None.pdf}
@@ -133,7 +133,7 @@ To assess the systematic uncertainties of the trigger efficiency measurement, po
 \label{fig:triggerEffBias}
 \end{center}
 \end{figure}
-The turn-on of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets triggered by single lepton triggers. Triggers with \pt thresholds of $\unit{24(27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria having to be applied on HLT level. Dilepton events are selected in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired to the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for five different trailing lepton trigger legs and combining the central and forward selection. It can be seen that the efficiency for trailing electrons are virtually the same for the dielectron and OF triggers (black and light blue markers). The same is not true for trailing muons in the dimuon and OF triggers (red and dark blue markers), caused by the increased efficiency for trailing muons in the \verb+HLT_Mu17_TkMu8+ trigger, which is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turn-on than trailing electrons and are fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only at about $\unit{\approx 30}{\giga\electronvolt}$. The turn-on is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As in the design of the analysis the precision and stability of the background prediction was given priority over lepton acceptance, events with trailing leptons in this \pt range are rejected.  
+The turn-on of the triggers at low lepton \pt is of particular interest because asymmetries between the lepton flavours are more likely to occur in this difficult environment. The dependence of the trigger efficiency on the \pt of the trailing lepton can be studied using datasets triggered by single lepton triggers. Triggers with \pt thresholds of $\unit{24(27)}{\giga\electronvolt}$ for muons (electrons) are available. These thresholds are relatively low for single lepton triggers, resulting in very strict selection criteria having to be applied on HLT level. Dilepton events are selected in which the leading lepton can be matched  geometrically to the trigger object that fired the single lepton trigger. The trailing lepton is matched to trigger objects that have fired the trailing leg of the dilepton trigger. The efficiency is defined as the ratio of the number of events in which the dilepton trigger has fired to the total number of dilepton events. The resulting efficiency curves are shown in Figure~\ref{fig:triggerEffTrailing} for five different trailing lepton trigger legs and combining the central and forward selection. It can be seen that the efficiency for trailing electrons are virtually the same for the dielectron and OF triggers (black and light blue markers). The same is not true for trailing muons in the dimuon and OF triggers (red and dark blue markers), caused by the increased efficiency for trailing muons in the $\mu\mu$ channel, which is significantly higher than those in the trigger paths not using the tracker information, as expected. Trailing muons have a much sharper turn-on than trailing electrons and are fully efficient already at a \pt of $\unit{10}{\giga\electronvolt}$. For electrons the plateau is reached only at about $\unit{\approx 30}{\giga\electronvolt}$. The turn-on is steeper for trailing electrons in the dielectron trigger compared to those in the OF trigger, resulting in an increased deviation from flavour symmetry below $\unit{20}{\giga\electronvolt}$. As in the design of the analysis the precision and stability of the background prediction was given priority over lepton acceptance, events with trailing leptons in this \pt range are rejected.  
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.35]{plots/BG/trigger/Triggereff_SingleLepton_HighHTExclusive_Full2012_TrailingPt_leadingPt30Single.pdf}
@@ -141,7 +141,7 @@ The turn-on of the triggers at low lepton \pt is of particular interest because 
 \label{fig:triggerEffTrailing}
 \end{center}
 \end{figure} 
-To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset not triggered by $\alpha_\mathrm{T}$ triggers is used, as the PF $H_T$ triggers do not provide enough events for these studies. A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on $R_T$, covering all observed deviations from the the measured value of $R_T$ within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}.
+To assess the systematic uncertainties of the trigger efficiency measurement, the dependency of \RT, as used in the calculation of \Rsfof, on different observables is tested. Here a dataset not triggered by $\alpha_\mathrm{T}$ triggers is used, as the PF \HT triggers do not provide enough events for these studies. A 5\% systematic uncertainty is assigned to each trigger efficiency, resulting in an uncertainty of 6.4\% on \RT, covering all observed deviations from the the measured value of \RT within the statistical uncertainties, as shown in Figure~\ref{fig:RTDependencies}. Studies of further variables can be found in Appendix~\ref{app:RT}. The mean \RT values displayed in the figures are obtained using the $\alpha_{\mathrm{T}}$ trigger as baseline and therefore differ from the nominal result obtained using the PF \HT triggers. 
 \begin{figure}[htbp]
 \centering
 \begin{minipage}[t]{0.49\textwidth}
