--- a/thesis.bib
+++ b/thesis.bib
@@ -1450,3 +1450,46 @@ with the CMS Experiment}",
       reportNumber   = "CAVENDISH-HEP-91-5",
       SLACcitation   = "%%CITATION = PHLTA,B269,432;%%",
 }
+
+
+@conference{Verkerke:2003ir,
+      author         = "Verkerke, Wouter and Kirkby, David P.",
+      title          = "{The RooFit toolkit for data modeling}",
+      booktitle        = "{2003 Computing in High Energy and Nuclear Physics (CHEP03)}",
+      pages          = "183",
+      year           = "2003",
+      eprint         = "physics/0306116",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics",
+      reportNumber   = "CHEP-2003-MOLT007",
+      SLACcitation   = "%%CITATION = PHYSICS/0306116;%%",
+      note 			 = "eConf C0303241 (2003) MOLT007",
+}
+
+@article{Aad:2015zhl,
+      author         = "Aad, Georges and others",
+      title          = "{Combined Measurement of the Higgs Boson Mass in $pp$
+                        Collisions at $\sqrt{s}=7$ and 8 TeV with the ATLAS and
+                        CMS Experiments}",
+      collaboration  = "ATLAS, CMS",
+      year           = "2015",
+      eprint         = "1503.07589",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "ATLAS-HIGG-2014-14, CMS-HIG-14-042, CERN-PH-EP-2015-075",
+      SLACcitation   = "%%CITATION = ARXIV:1503.07589;%%",
+      note 			 = {Accepted by PRL\fixme{Check for publication}}
+}
+
+@article{Wess197439,
+title = "Supergauge transformations in four dimensions ",
+journal = "Nuclear Physics B",
+volume = "70",
+pages = "39",
+year = "1974",
+note = "",
+issn = "0550-3213",
+doi = "http://dx.doi.org/10.1016/0550-3213(74)90355-1",
+url = "http://www.sciencedirect.com/science/article/pii/0550321374903551",
+author = "J. Wess and B. Zumino"
+}
